--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 REACT_APP_MIDTRANS_CLIENT_KEY = SB-Mid-client-1az7ybIg98w4ol6j
-React_APP_BASEURL = https://<backend_domain>/api/v1/
+REACT_APP_BASEURL = https://deployment-production-6697.up.railway.app/api/v1/
