--- a/server/.env
+++ b/server/.env
@@ -1,14 +1,14 @@
-SECRET_KEY=bolehapaaja
-PATH_FILE=http://localhost:5000/uploads/
-SERVER_KEY=SB-Mid-server-wWQjonH-4tCb9YKTrhhUb-7c
-CLIENT_KEY=SB-Mid-client-1az7ybIg98w4ol6j
-EMAIL_SYSTEM=bogeymanyolo@gmail.com
-PASSWORD_SYSTEM=jznlnomiidooqcts
-DB_HOST=containers-us-west-22.railway.app
-DB_USER=postgres
-DB_PASSWORD=MLRYrhwyrAvorr3eUU6T
-DB_NAME=railway
-DB_PORT=6846
-CLOUD_NAME=dthp3hyrk
-API_KEY=188487286411712
-API_SECRET=XwsbIFSaep6WxulpAcJE2-1thYo
+# SECRET_KEY=bolehapaaja
+# PATH_FILE=http://localhost:5000/uploads/
+# SERVER_KEY=SB-Mid-server-wWQjonH-4tCb9YKTrhhUb-7c
+# CLIENT_KEY=SB-Mid-client-1az7ybIg98w4ol6j
+# EMAIL_SYSTEM=bogeymanyolo@gmail.com
+# PASSWORD_SYSTEM=jznlnomiidooqcts
+# DB_HOST=containers-us-west-22.railway.app
+# DB_USER=postgres
+# DB_PASSWORD=MLRYrhwyrAvorr3eUU6T
+# DB_NAME=railway
+# DB_PORT=6846
+# CLOUD_NAME=dthp3hyrk
+# API_KEY=188487286411712
+# API_SECRET=XwsbIFSaep6WxulpAcJE2-1thYo
